--- a/civic-rezo-backend/package.json
+++ b/civic-rezo-backend/package.json
@@ -8,23 +8,31 @@
     "dev": "nodemon server.js",
     "test": "jest"
   },
-  "keywords": ["civic", "complaints", "backend", "api"],
+  "keywords": [
+    "civic",
+    "complaints",
+    "backend",
+    "api"
+  ],
   "author": "REZO Team",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "dotenv": "^16.3.1",
     "@supabase/supabase-js": "^2.38.4",
+    "axios": "^1.11.0",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-validator": "^7.0.1",
-    "morgan": "^1.10.0"
+    "form-data": "^4.0.4",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.34.3"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.2"
   }
 }
