--- a/civic-rezo-frontend/package.json
+++ b/civic-rezo-frontend/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^7.4.7",
     "@supabase/supabase-js": "^2.56.1",
     "expo": "~53.0.22",
+    "expo-image-picker": "^16.1.4",
     "expo-linear-gradient": "^14.1.5",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
