--- a/civic-rezo-backend/package.json
+++ b/civic-rezo-backend/package.json
@@ -17,6 +17,8 @@
   "author": "REZO Team",
   "license": "MIT",
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@google-cloud/speech": "^7.2.0",
     "@supabase/supabase-js": "^2.38.4",
     "axios": "^1.11.0",
     "bcryptjs": "^2.4.3",
@@ -24,6 +26,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "fluent-ffmpeg": "^2.1.3",
     "form-data": "^4.0.4",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
