--- a/civic-rezo-frontend/package.json
+++ b/civic-rezo-frontend/package.json
@@ -9,21 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.4.6",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.7",
     "@supabase/supabase-js": "^2.56.1",
+    "axios": "^1.11.0",
     "expo": "~53.0.22",
+    "expo-av": "^15.1.7",
     "expo-image-picker": "^16.1.4",
     "expo-linear-gradient": "^14.1.5",
     "expo-status-bar": "~2.2.3",
+    "fluent-ffmpeg": "^2.1.3",
     "react": "19.0.0",
     "react-native": "0.79.6",
     "react-native-async-storage": "^0.0.1",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1"
+    "react-native-screens": "~4.11.1",
+    "react-native-voice": "^0.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
