integrated all the modules

--- a/civic-rezo-frontend/app.json
+++ b/civic-rezo-frontend/app.json
@@ -1,26 +1,65 @@
 {
   "expo": {
-    "name": "civic-rezo-frontend",
-    "slug": "civic-rezo-frontend",
+    "name": "CivicRezo",
+    "slug": "civic-rezo",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
+    "description": "AI-powered civic complaint management system with location-based priority scoring",
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
+    "plugins": [
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "This app needs location access to calculate priority scores for civic complaints based on nearby infrastructure.",
+          "locationAlwaysPermission": "This app needs location access to calculate priority scores for civic complaints based on nearby infrastructure.",
+          "locationWhenInUsePermission": "This app needs location access to calculate priority scores for civic complaints based on nearby infrastructure."
+        }
+      ],
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "This app needs camera access to capture images of civic issues for complaint submission."
+        }
+      ]
+    ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.civicrezo",
+      "config": {
+        "googleMapsApiKey": "AIzaSyAz6Qw4PcBItmkwJ8XiRX12BQdbjYvD7b8"
+      },
+      "infoPlist": {
+        "NSLocationWhenInUseUsageDescription": "This app needs location access to calculate priority scores for civic complaints based on nearby infrastructure.",
+        "NSLocationAlwaysAndWhenInUseUsageDescription": "This app needs location access to calculate priority scores for civic complaints based on nearby infrastructure.",
+        "NSCameraUsageDescription": "This app needs camera access to capture images of civic issues for complaint submission."
+      }
     },
     "android": {
+      "package": "com.civicrezo",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "config": {
+        "googleMaps": {
+          "apiKey": "AIzaSyAz6Qw4PcBItmkwJ8XiRX12BQdbjYvD7b8"
+        }
+      },
+      "permissions": [
+        "ACCESS_FINE_LOCATION",
+        "ACCESS_COARSE_LOCATION",
+        "CAMERA",
+        "WRITE_EXTERNAL_STORAGE",
+        "READ_EXTERNAL_STORAGE"
+      ]
     },
     "web": {
       "favicon": "./assets/favicon.png"
