--- a/civic-rezo-backend/package.json
+++ b/civic-rezo-backend/package.json
@@ -17,22 +17,23 @@
   "author": "REZO Team",
   "license": "MIT",
   "dependencies": {
-    "@supabase/supabase-js": "^2.38.4",
+    "@supabase/supabase-js": "^2.57.2",
     "axios": "^1.11.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "express": "^5.1.0",
     "express-validator": "^7.0.1",
     "form-data": "^4.0.4",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.0",
+    "morgan": "^1.10.1",
     "multer": "^1.4.5-lts.1",
-    "sharp": "^0.34.3"
+    "sharp": "^0.34.3",
+    "tr46": "^5.1.1"
   },
   "devDependencies": {
-    "jest": "^29.7.0",
-    "nodemon": "^3.0.2"
+    "jest": "^30.1.3",
+    "nodemon": "^1.4.1"
   }
 }
