--- a/civic-rezo-frontend/package.json
+++ b/civic-rezo-frontend/package.json
@@ -10,20 +10,27 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-picker/picker": "2.11.1",
+    "@react-native-picker/picker": "^2.11.1",
+    "@react-native-voice/voice": "^3.2.4",
     "@react-navigation/bottom-tabs": "^7.4.6",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.7",
     "@supabase/supabase-js": "^2.56.1",
     "expo": "~53.0.22",
+    "expo-av": "^15.1.7",
+    "expo-camera": "^16.1.11",
     "expo-image-picker": "^16.1.4",
     "expo-linear-gradient": "^14.1.5",
+    "expo-location": "^18.1.6",
+    "expo-speech": "^13.1.7",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.6",
     "react-native-async-storage": "^0.0.1",
+    "react-native-maps": "1.18.0",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1"
+    "react-native-screens": "~4.11.1",
+    "react-native-vector-icons": "^10.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
